--- a/assignment/templates/assignment/detail.html
+++ b/assignment/templates/assignment/detail.html
@@ -41,7 +41,7 @@
       <p class='detail-heading'>Questions:</p>
       {% for question in questions %}
         <p class='detail-content'>{{question.question|capfirst}}</p>
-        <hr style='border-width:.5px; border-color:rgb(200,200,200); margin:20px 0 20px 0;'>
+        <hr style='border: .5px dashed rgb(200,200,200); margin:40px 0 40px 0;'>
       {% endfor %}
     </div>
   
