--- a/assignment/static/assignment/submission.css
+++ b/assignment/static/assignment/submission.css
@@ -1,25 +1,5 @@
-.content {
-  background-color: white;
-  -webkit-box-shadow: 0 4px 15px rgba(110, 110, 110, 0.2);
-          box-shadow: 0 4px 15px rgba(110, 110, 110, 0.2);
-  font-family: "Noto Sans JP", sans-serif;
-  padding-bottom: 50px;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-}
-
-.content .header {
-  padding: 30px;
-}
-
-.content .header h1 {
-  margin: 0;
-  font-weight: 400;
-  font-size: 35px;
-}
-
-.content .list {
-  margin: 40px 40px 0 40px;
+.list-item {
+  margin: 10px 40px 0 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +12,7 @@
           flex-flow: column;
 }
 
-.content .list .sub-list {
+.list-item .sub-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,18 +29,18 @@
   margin: 0 10px 0 10px;
 }
 
-.content .list .sub-list .description {
+.list-item .sub-list .description {
   font-size: 14px;
 }
 
-.content .list .sub-list .description.clip {
+.list-item .sub-list .description.clip {
   white-space: nowrap;
   width: 55vw;
   text-overflow: ellipsis;
   overflow: hidden;
 }
 
-.content .list .sub-list a {
+.list-item .sub-list a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -86,32 +66,32 @@
   transition: all 250ms ease-in-out;
 }
 
-.content .list .sub-list a.dead-link {
+.list-item .sub-list a.dead-link {
   cursor: default;
   color: grey;
 }
 
-.content .list .description {
+.list-item .description {
   margin: 10px;
   font-size: 13px;
   color: grey;
 }
 
-.content .list .description.cilp {
+.list-item .description.cilp {
   text-overflow: clip;
   white-space: nowrap;
 }
 
-.content .list a {
+.list-item a {
   text-decoration: none;
 }
 
-.content .list p {
+.list-item p {
   margin: 10px;
   width: 100%;
 }
 
-.content .list .action {
+.list-item .action {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,7 +101,7 @@
           flex-flow: row-reverse;
 }
 
-.content .list .action .btn {
+.list-item .action .btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -150,12 +130,12 @@
   transition: all 250ms ease-in-out;
 }
 
-.content .list .action .btn:hover {
+.list-item .action .btn:hover {
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
 }
 
-.content .list .hr {
+.list-item .hr {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
