--- a/assignment/templates/assignment/detail.html
+++ b/assignment/templates/assignment/detail.html
@@ -9,6 +9,17 @@
   {{ object.name|capfirst }}
 {% endblock heading %}
 
+{% block breadcrumbs %}
+      <li><a href="{% url 'dashboard:home' %}">Home</a></li>
+      <li>></li>
+      <li><a href="{% url 'course:list' course_type=course_type %}">{{course_type|capfirst}}</a></li>
+      <li>></li>
+      <li><a href="{% url 'course:detail' course_type=course_type id=object.course.id %}">Course</a></li>
+      <li>></li>
+      <li><a href="{% url 'assignment:all' course_type=course_type course_id=object.course.id %}">All assignments</a></li>
+      <li>></li>
+{% endblock breadcrumbs %}
+
 {% block sub-info %}
   {% if deadline_expired %}
     <p style='color:red;'>Deadline:  {{ object.deadline }}</p>
