--- a/assignment/templates/assignment/list.html
+++ b/assignment/templates/assignment/list.html
@@ -13,12 +13,20 @@
   All assignments
 {% endblock heading %}
 
-{% block actions %}
+{% block breadcrumbs %}
+  <li><a href="{% url 'dashboard:home' %}">Home</a></li>
+  <li>></li>
+  <li><a href="{% url 'course:list' course_type=course_type %}">{{course_type|capfirst}}</a></li>
+  <li>></li>
+  <li><a href="{% url 'course:detail' course_type=course_type id=course_id %}">Course</a></li>
+  <li>></li>
+{% endblock breadcrumbs %}
 
-{% endblock actions %}
+{% block actions %}
   {% if is_tutor %}
     <a class='btn' href="create"><i class='material-icons'>add</i>Create new</a>
   {% endif %}
+{% endblock actions %}
 
 {% block list %}        
   {% for assignment in object_list %}
@@ -30,7 +38,7 @@
         <a href="{{assignment.id}}" class='btn'>View</a>
       </div>
     </div>
-    <hr style='border: .5px dashed rgb(200,200,200); margin:40px 0 40px 0;'>
+    <hr style='border: .5px dashed rgb(200,200,200); margin:20px 0 40px 0;'>
   {% endfor %}
 {% endblock list %}  
 </html>
