--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -5,6 +5,13 @@
   {{ object.name }}
 {% endblock title %}
 
+{% block breadcrumbs %}
+  <li><a href="{% url 'dashboard:home' %}">Home</a></li>
+  <li>></li>
+  <li><a href="{% url 'course:list' course_type=course_type %}">{{course_type|capfirst}}</a></li>
+  <li>></li>
+{% endblock breadcrumbs %}
+
 {% block heading %}
   {{ object.name|capfirst }}
 {% endblock heading %}
