--- a/ui_components/static/ui_components/base.css
+++ b/ui_components/static/ui_components/base.css
@@ -152,4 +152,30 @@ body .content {
       -ms-flex-align: center;
           align-items: center;
 }
+
+.breadcrumb {
+  margin-left: 0;
+  padding-left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  font-size: 13px;
+  font-weight: 400;
+  list-style: none;
+}
+
+.breadcrumb li {
+  white-space: nowrap;
+  color: #4c2fc9;
+  margin-right: 5px;
+}
+
+.breadcrumb li a {
+  text-decoration: none;
+  color: #4c2fc9;
+}
 /*# sourceMappingURL=base.css.map */
