--- a/ui_components/static/ui_components/form_template_1.scss
+++ b/ui_components/static/ui_components/form_template_1.scss
@@ -7,12 +7,14 @@ body {
     display: flex;
     flex-flow: column;
     align-items: stretch;
-    h1 {
-      margin: 0;
-      padding: 30px;
-      font-family: "Noto Sans JP", sans-serif;
-      font-weight: 700;
-      font-size: 30px;
+    .header {
+      h1 {
+        margin: 0;
+        padding: 30px;
+        font-family: "Noto Sans JP", sans-serif;
+        font-weight: 700;
+        font-size: 30px;
+      }
     }
     form {
       padding-top: 10px;
