--- a/ui_components/static/ui_components/list_template_1.scss
+++ b/ui_components/static/ui_components/list_template_1.scss
@@ -6,7 +6,7 @@
   margin-top: 10vh;
   margin-bottom: 10vh;
   .header {
-    padding: 30px;
+    padding: 40px 30px 30px 30px;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
@@ -17,6 +17,7 @@
       font-size: 35px;
     }
     .actions {
+      padding-top: 50px;
       a {
         text-decoration: none;
       }
