added assignment and course update pages and fixed assignment submissions grouping and ordering

--- a/assignment/templates/assignment/tutor_actions.html
+++ b/assignment/templates/assignment/tutor_actions.html
@@ -11,7 +11,7 @@
             </i>
             <p>Add questions</p>
         </a>
-        <a href="#" title = 'Edit assignment'>
+        <a href="update" title = 'Edit assignment'>
             <i class='material-icons'>
                 edit
             </i>
