--- a/course/templates/course/tutor_actions.html
+++ b/course/templates/course/tutor_actions.html
@@ -11,7 +11,7 @@
             </i>
             <p>Create assignments</p>
         </a>
-        <a href="#" title = 'Edit course'>
+        <a href="update" title = 'Edit course'>
             <i class='material-icons'>
                 edit
             </i>
