fixed redirect url on assignment update

--- a/assignment/templates/assignment/update.html
+++ b/assignment/templates/assignment/update.html
@@ -25,5 +25,5 @@
 {% block form %}
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Create">
+    <input type="submit" value="Update">
 {% endblock form%}
