--- a/ui_components/static/ui_components/form_template_1.css
+++ b/ui_components/static/ui_components/form_template_1.css
@@ -107,7 +107,7 @@ body .content form .errorlist {
 
 body .content form input {
   margin: 10px 0 10px 0;
-  height: 6.5vh;
+  height: 43px;
   border: 1px solid #b4b4b4;
   background-color: #f3f4f5;
   border: none;
