--- a/ui_components/static/ui_components/form_template_1.scss
+++ b/ui_components/static/ui_components/form_template_1.scss
@@ -81,7 +81,7 @@ body {
       }
       input {
         margin: 10px 0 10px 0;
-        height: 6.5vh;
+        height: 43px;
         border: 1px solid rgb(180, 180, 180);
         background-color: #f3f4f5;
         border: none;
