--- a/ui_components/templates/ui_components/detail_template_1.html
+++ b/ui_components/templates/ui_components/detail_template_1.html
@@ -3,6 +3,8 @@
 
 {% block static %}
     <link rel="stylesheet" href="{% static 'ui_components/detail_template_1.css' %}">
+    {% block static_detail %}
+    {% endblock static_detail %}
 {% endblock static %}
 
 {% block body %}
