--- a/ui_components/static/ui_components/base.css
+++ b/ui_components/static/ui_components/base.css
@@ -26,11 +26,10 @@ body .navbar {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: navbar;
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 8.5vh;
   background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -170,12 +169,10 @@ body .content {
 
 .breadcrumb li {
   white-space: nowrap;
-  color: #4c2fc9;
   margin-right: 5px;
 }
 
 .breadcrumb li a {
   text-decoration: none;
-  color: #4c2fc9;
 }
 /*# sourceMappingURL=base.css.map */
