--- a/ui_components/static/ui_components/base.scss
+++ b/ui_components/static/ui_components/base.scss
@@ -14,10 +14,10 @@ body {
   justify-content: center;
   .navbar {
     grid-area: navbar;
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 8.5vh;
     background-color: white;
     display: flex;
     flex-flow: row wrap;
@@ -114,11 +114,11 @@ body {
   list-style: none;
   li {
     white-space: nowrap;
-    color: #4c2fc9;
+    // color: #4c2fc9;
     margin-right: 5px;
     a {
       text-decoration: none;
-      color: #4c2fc9;
+      // color: #4c2fc9;
     }
   }
 }
