--- a/ui_components/templates/ui_components/detail_btn_primary.html
+++ b/ui_components/templates/ui_components/detail_btn_primary.html
@@ -1,4 +1,4 @@
-<button onclick={{ btn_onclick|default:"window.location.href=''" }} class='btn btn-primary {{ btn_class }}' {{btn_id}} >
+<button onclick={{ btn_onclick|default:"false" }} class='btn btn-primary {{ btn_class }}' {{btn_id}} >
     <i class='material-icons'>
         {{ btn_icon }}
     </i>
