refactored code for pdf generation
added download all solutions option

--- a/assignment/templates/assignment/submission.html
+++ b/assignment/templates/assignment/submission.html
@@ -26,6 +26,12 @@
     <li>></li>
 {% endblock breadcrumbs %}
 
+{% block actions %}
+    {% if is_tutor %}
+        <a class='btn' href='all-submissions-pdf' target='_blank'>Download all</a>
+    {% endif %}
+{% endblock actions %}
+
 {% block list %}
     {% for user in object_list %}
         <div class='list-item'>
