--- a/ui_components/templates/ui_components/form_template_1.html
+++ b/ui_components/templates/ui_components/form_template_1.html
@@ -3,6 +3,7 @@
 
 {% block static %}
   <link rel="stylesheet" href="{% static 'ui_components/form_template_1.css' %}">
+  {% block form_static %}{% endblock form_static %}
 {% endblock static %}
 
 {% block body %}
