--- a/ui_components/static/ui_components/base.scss
+++ b/ui_components/static/ui_components/base.scss
@@ -112,13 +112,16 @@ body {
   font-size: 13px;
   font-weight: 400;
   list-style: none;
+  font-family: "Noto Sans JP", sans-serif;
   li {
     white-space: nowrap;
     // color: #4c2fc9;
+    color: black;
     margin-right: 5px;
     a {
       text-decoration: none;
       // color: #4c2fc9;
+      color: black;
     }
   }
 }
