added quiz creation for courses added edit quiz added quiz detail page added all quiz list added recent assignment page

--- a/ui_components/templates/ui_components/assignment_dropdown.html
+++ b/ui_components/templates/ui_components/assignment_dropdown.html
@@ -2,7 +2,7 @@
     <button class='dropdown-btn' >Assignments</button>
     <div class='dropdown-content'>
         <a href="#">Pending assignments</a>
-        <a href="#">Recently added</a>
+        <a href="{% url 'assignment:recent_assignments' course_type='enrolled-courses' %}">Recently added</a>
         <a href="#">Completed assignments</a>
     </div>
 </div>
