imporoved styling for recent assignments

--- a/assignment/templates/assignment/list_filter.html
+++ b/assignment/templates/assignment/list_filter.html
@@ -21,14 +21,12 @@
 {% block list %}        
   {% for assignment in object_list %}
     <div class='list_item' >
-      <p class='item-heading'>{{ assignment.name|capfirst }}</p>
+      <p class='item-heading'>{{ assignment.name|capfirst }}<span>|</span><span>{{ assignment.course.name|capfirst }}</span></p>
       <p class='description'>{{ assignment.description|capfirst }}</p>
       <div class='action'>
         <a href="{% url 'assignment:upload-solution' course_id=assignment.course.id course_type='enrolled-courses' assignment_id=assignment.id %}" class='btn'>Submit</a>
         <a href="{% url 'assignment:detail' course_id=assignment.course.id course_type='enrolled-courses' assignment_id=assignment.id %}" class='btn'>View</a>
       </div>
-    </div>
-    <hr style='border: .5px dashed rgb(200,200,200); margin:20px 0 40px 0;'>
   {% endfor %}
 {% endblock list %}  
 </html>
