--- a/assignment/static/assignment/list.scss
+++ b/assignment/static/assignment/list.scss
@@ -7,6 +7,11 @@
       font-size: 14px;
       color: grey;
     }
+    span {
+      margin-left: 10px;
+      // font-size: 15px;
+      color: grey;
+    }
   }
   a {
     text-decoration: none;
